--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=devidce-width, initial-scale="1.0>
+    <link rel="styleheet" href=".style/style.cc">
+    <title>Site da escola</title>
+</head>
+<body>
+    <header class="cabecalho">
+        <h1>
+            IMG
+        </h1>
+        <nav>
+            <ul>
+                <li>Escola</li>
+                <li>Estudante</li>
+            </ul>
+        </nav>
+    </header>
 
+    <section class="escola"></section>
+    <section class="estudantes"></section>
+
+</body>
+</html>
