--- a/index.html
+++ b/index.html
@@ -19,8 +19,23 @@
         </nav>
     </header>
 
-    <section class="escola"></section>
-    <section class="estudantes"></section>
+    <section class="escola">
+    <div class="escola-conteudo">
+    <h2 class="escola-titulo">Sobre a escola</h2>
+    <p class="escola-texto-um">Descrição da escola</p>
+<p class="escola-texto-dois">Descrição da turma</p>
+    </div>
+    <img class="escola-imagem" src="imagem.escola.jm" alt="imagens da escola">
+</section>
+    <section class="estudantes">
+        <div class="estudantes-todos">
+            <div class="estudantes-div">
+                <img class="estudantes-imagens" src="" alt="foto do estudante">
+                <h3 class="estudantes-nome">Nome do estudante</h3>
+                <a href="#"></a>
+            </div>
+        </div>
+    </section>
 
 </body>
 </html>
