--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=devidce-width, initial-scale="1.0>
-    <link rel="styleheet" href=".style/style.cc">
     <title>Site da escola</title>
+    <link rel="styleheet" href=".style/style.cc">
 </head>
 <body>
     <header class="cabecalho">
@@ -12,9 +12,9 @@
             IMG
         </h1>
         <nav>
-            <ul>
-                <li>Escola</li>
-                <li>Estudante</li>
+            <ul class="cabecalho-lista">
+                <li class="cabecalho-lista-item">Escola</li>
+                <li class="cabecalho-lista-item">Estudante</li>
             </ul>
         </nav>
     </header>
@@ -27,14 +27,33 @@
     </div>
     <img class="escola-imagem" src="imagem.escola.jm" alt="imagens da escola">
 </section>
+
     <section class="estudantes">
-        <div class="estudantes-todos">
+        <h2 class="estudante-titulo">Quem são nossos estudantes</h2>
+            <div class="estudantes-todos">
+                
+                <div class="estudantes-div">
+                <img class="estudantes-imagens" src="" alt="foto do estudante">
+                <h3 class="estudantes-nome">Nome do estudante</h3>
+                <a href="#"><img class="estudantes-icone" src="" alt="instagram"></a>
+                <a href="#"><img class="estudantes-icone" src="" alt="git-hub"></a>
+            </div>
+
             <div class="estudantes-div">
                 <img class="estudantes-imagens" src="" alt="foto do estudante">
                 <h3 class="estudantes-nome">Nome do estudante</h3>
-                <a href="#"></a>
+                <a href="#"><img class="estudantes-icone" src="" alt="instagram"></a>
+                <a href="#"><img class="estudantes-icone" src="" alt="git-hub"></a>
             </div>
-        </div>
+
+            <div class="estudantes-div">
+                <img class="estudantes-imagens" src="" alt="foto do estudante">
+                <h3 class="estudantes-nome">Nome do estudante</h3>
+                <a href="#"><img class="estudantes-icone" src="" alt="instagram"></a>
+                <a href="#"><img class="estudantes-icone" src="" alt="git-hub"></a>
+            </div>
+
+            </div>
     </section>
 
 </body>
