--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
         <h1>
             IMG
         </h1>
-        <nav>
             <ul class="cabecalho-lista">
                 <li class="cabecalho-lista-item">Escola</li>
                 <li class="cabecalho-lista-item">Estudante</li>
             </ul>
-        </nav>
     </header>
 
     <section class="escola">
@@ -33,6 +31,27 @@
             <div class="estudantes-todos">
                 
                 <div class="estudantes-div">
+                <img class="estudantes-imagens" src="" alt="foto do estudante">
+                <h3 class="estudantes-nome">Nome do estudante</h3>
+                <a href="#"><img class="estudantes-icone" src="" alt="instagram"></a>
+                <a href="#"><img class="estudantes-icone" src="" alt="git-hub"></a>
+            </div>
+
+            <div class="estudantes-div">
+                <img class="estudantes-imagens" src="" alt="foto do estudante">
+                <h3 class="estudantes-nome">Nome do estudante</h3>
+                <a href="#"><img class="estudantes-icone" src="" alt="instagram"></a>
+                <a href="#"><img class="estudantes-icone" src="" alt="git-hub"></a>
+            </div>
+
+            <div class="estudantes-div">
+                <img class="estudantes-imagens" src="" alt="foto do estudante">
+                <h3 class="estudantes-nome">Nome do estudante</h3>
+                <a href="#"><img class="estudantes-icone" src="" alt="instagram"></a>
+                <a href="#"><img class="estudantes-icone" src="" alt="git-hub"></a>
+            </div>
+
+            <div class="estudantes-div">
                 <img class="estudantes-imagens" src="" alt="foto do estudante">
                 <h3 class="estudantes-nome">Nome do estudante</h3>
                 <a href="#"><img class="estudantes-icone" src="" alt="instagram"></a>
