--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="cabecalho">
         <h1>
-            IMG
+            <img src="./imagem/julio.png" class="cabecalho.imagem" alt="logo da escola">
         </h1>
             <ul class="cabecalho-lista">
                 <li class="cabecalho-lista-item">Escola</li>
@@ -50,7 +50,8 @@
                 <a href="#"><img class="estudantes-icone" src="" alt="instagram"></a>
                 <a href="#"><img class="estudantes-icone" src="" alt="git-hub"></a>
             </div>
-
+<span></span>
+                <span></span>
             <div class="estudantes-div">
                 <img class="estudantes-imagens" src="" alt="foto do estudante">
                 <h3 class="estudantes-nome">Nome do estudante</h3>
@@ -75,5 +76,9 @@
             </div>
     </section>
 
+    <footer class="rodape">
+        <h4>Produzido por Aluno - 2B</h4>
+        <img class="rodape-imagem" scr="./imagem/github.png">
+    </footer>
 </body>
 </html>
