--- a/index.html
+++ b/index.html
@@ -23,40 +23,40 @@
     <p class="escola-texto-um">Descrição da escola</p>
 <p class="escola-texto-dois">Descrição da turma</p>
     </div>
-    <img class="escola-imagem" src="imagem.escola.jm" alt="imagens da escola">
+    <img class="escola-imagem" src="imagem-escola.jpg" alt="imagem da escola">
 </section>
 
     <section class="estudantes">
         <h2 class="estudante-titulo">Quem são nossos estudantes</h2>
             <div class="estudantes-todos">
-                
+                <span></span>
                 <div class="estudantes-div">
                 <img class="estudantes-imagens" src="" alt="foto do estudante">
                 <h3 class="estudantes-nome">Nome do estudante</h3>
-                <a href="#"><img class="estudantes-icone" src="" alt="instagram"></a>
-                <a href="#"><img class="estudantes-icone" src="" alt="git-hub"></a>
+                <a href="#"><img class="estudantes-icone" src="./imagem/instagram.png" alt="instagram"></a>
+                <a href="#"><img class="estudantes-icone" src="./imagem/github.png" alt="git-hub"></a>
             </div>
 
             <div class="estudantes-div">
                 <img class="estudantes-imagens" src="" alt="foto do estudante">
-                <h3 class="estudantes-nome">Nome do estudante</h3>
-                <a href="#"><img class="estudantes-icone" src="" alt="instagram"></a>
-                <a href="#"><img class="estudantes-icone" src="" alt="git-hub"></a>
+                <h3 class="estudantes-nome">Mary Jane</h3>
+                <a href="#"><img class="estudantes-icone" src="./imagem/instagram.png" alt="instagram"></a>
+                <a href="#"><img class="estudantes-icone" src="./imagem/github.png" alt="git-hub"></a>
             </div>
 
             <div class="estudantes-div">
                 <img class="estudantes-imagens" src="" alt="foto do estudante">
-                <h3 class="estudantes-nome">Nome do estudante</h3>
-                <a href="#"><img class="estudantes-icone" src="" alt="instagram"></a>
-                <a href="#"><img class="estudantes-icone" src="" alt="git-hub"></a>
+                <h3 class="estudantes-nome">Nei</h3>
+                <a href="#"><img class="estudantes-icone" src="./imagem/instagram.png" alt="instagram"></a>
+                <a href="#"><img class="estudantes-icone" src="./imagem/github.png" alt="git-hub"></a>
             </div>
 <span></span>
                 <span></span>
             <div class="estudantes-div">
                 <img class="estudantes-imagens" src="" alt="foto do estudante">
-                <h3 class="estudantes-nome">Nome do estudante</h3>
-                <a href="#"><img class="estudantes-icone" src="" alt="instagram"></a>
-                <a href="#"><img class="estudantes-icone" src="" alt="git-hub"></a>
+                <h3 class="estudantes-nome">Hellen</h3>
+                <a href="#"><img class="estudantes-icone" src="./imagem/instagram.png" alt="instagram"></a>
+                <a href="#"><img class="estudantes-icone" src="./imagem/github.png" alt="git-hub"></a>
             </div>
 
             <div class="estudantes-div">
@@ -69,15 +69,15 @@
             <div class="estudantes-div">
                 <img class="estudantes-imagens" src="" alt="foto do estudante">
                 <h3 class="estudantes-nome">Nome do estudante</h3>
-                <a href="#"><img class="estudantes-icone" src="" alt="instagram"></a>
-                <a href="#"><img class="estudantes-icone" src="" alt="git-hub"></a>
+                <a href="#"><img class="estudantes-icone" src="./imagem/instagram.png" alt="instagram"></a>
+                <a href="#"><img class="estudantes-icone" src="./imagem/github.png" alt="git-hub"></a>
             </div>
 
             </div>
     </section>
 
     <footer class="rodape">
-        <h4>Produzido por Aluno - 2B</h4>
+        <h4>Produzido por Hellen - 2B</h4>
         <img class="rodape-imagem" scr="./imagem/github.png">
     </footer>
 </body>
