--- a/index.html
+++ b/index.html
@@ -31,21 +31,21 @@
             <div class="estudantes-todos">
                 <span></span>
                 <div class="estudantes-div">
-                <img class="estudantes-imagens" src="" alt="foto do estudante">
+                <img class="estudantes-imagens" src="./imagem/academic (1).png" alt="foto do estudante">
                 <h3 class="estudantes-nome">Nome do estudante</h3>
                 <a href="#"><img class="estudantes-icone" src="./imagem/instagram.png" alt="instagram"></a>
                 <a href="#"><img class="estudantes-icone" src="./imagem/github.png" alt="git-hub"></a>
             </div>
 
             <div class="estudantes-div">
-                <img class="estudantes-imagens" src="" alt="foto do estudante">
+                <img class="estudantes-imagens" src="./imagem/academic.png" alt="foto do estudante">
                 <h3 class="estudantes-nome">Mary Jane</h3>
                 <a href="#"><img class="estudantes-icone" src="./imagem/instagram.png" alt="instagram"></a>
                 <a href="#"><img class="estudantes-icone" src="./imagem/github.png" alt="git-hub"></a>
             </div>
 
             <div class="estudantes-div">
-                <img class="estudantes-imagens" src="" alt="foto do estudante">
+                <img class="estudantes-imagens" src="./imagem/graduated.png" alt="foto do estudante">
                 <h3 class="estudantes-nome">Nei</h3>
                 <a href="#"><img class="estudantes-icone" src="./imagem/instagram.png" alt="instagram"></a>
                 <a href="#"><img class="estudantes-icone" src="./imagem/github.png" alt="git-hub"></a>
@@ -53,21 +53,21 @@
 <span></span>
                 <span></span>
             <div class="estudantes-div">
-                <img class="estudantes-imagens" src="" alt="foto do estudante">
+                <img class="estudantes-imagens" src="./imagem/reading-book.png" alt="foto do estudante">
                 <h3 class="estudantes-nome">Hellen</h3>
                 <a href="#"><img class="estudantes-icone" src="./imagem/instagram.png" alt="instagram"></a>
                 <a href="#"><img class="estudantes-icone" src="./imagem/github.png" alt="git-hub"></a>
             </div>
 
             <div class="estudantes-div">
-                <img class="estudantes-imagens" src="" alt="foto do estudante">
+                <img class="estudantes-imagens" src="./imagem/students.png" alt="foto do estudante">
                 <h3 class="estudantes-nome">Nome do estudante</h3>
                 <a href="#"><img class="estudantes-icone" src="" alt="instagram"></a>
                 <a href="#"><img class="estudantes-icone" src="" alt="git-hub"></a>
             </div>
 
             <div class="estudantes-div">
-                <img class="estudantes-imagens" src="" alt="foto do estudante">
+                <img class="estudantes-imagens" src="./imagem/reading.png" alt="foto do estudante">
                 <h3 class="estudantes-nome">Nome do estudante</h3>
                 <a href="#"><img class="estudantes-icone" src="./imagem/instagram.png" alt="instagram"></a>
                 <a href="#"><img class="estudantes-icone" src="./imagem/github.png" alt="git-hub"></a>
