--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
 
             <div class="estudantes-div">
                 <img class="estudantes-imagens" src="./imagem/students.png" alt="foto do estudante">
-                <h3 class="estudantes-nome">Nome do estudante</h3>
-                <a href="#"><img class="estudantes-icone" src="" alt="instagram"></a>
-                <a href="#"><img class="estudantes-icone" src="" alt="git-hub"></a>
+                <h3 class="estudantes-nome">Barbie</h3>
+                <a href="#"><img class="estudantes-icone" src="./imagem/instagram.png" alt="instagram"></a>
+                <a href="#"><img class="estudantes-icone" src="./imagem/github.png" alt="git-hub"></a>
             </div>
 
             <div class="estudantes-div">
                 <img class="estudantes-imagens" src="./imagem/reading.png" alt="foto do estudante">
-                <h3 class="estudantes-nome">Nome do estudante</h3>
+                <h3 class="estudantes-nome">Hola</h3>
                 <a href="#"><img class="estudantes-icone" src="./imagem/instagram.png" alt="instagram"></a>
                 <a href="#"><img class="estudantes-icone" src="./imagem/github.png" alt="git-hub"></a>
             </div>
