--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=devidce-width, initial-scale="1.0>
+    <meta name="viewport" content="width=devidce-width, initial-scale=1.0">
     <title>Site da escola</title>
-    <link rel="styleheet" href=".style/style.cc">
+    <link rel="styleheet" href="./style/style.css">
 </head>
 <body>
     <header class="cabecalho">
@@ -13,7 +13,7 @@
         </h1>
             <ul class="cabecalho-lista">
                 <li class="cabecalho-lista-item">Escola</li>
-                <li class="cabecalho-lista-item">Estudante</li>
+                <li class="cabecalho-lista-item"><a href="#escola-titulo">Estudantes</a></li>
             </ul>
     </header>
 
