--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <span></span>
                 <div class="estudantes-div">
                 <img class="estudantes-imagens" src="./imagem/academic (1).png" alt="foto do estudante">
-                <h3 class="estudantes-nome">Nome do estudante</h3>
+                <h3 class="estudantes-nome">Buji</h3>
                 <a href="#"><img class="estudantes-icone" src="./imagem/instagram.png" alt="instagram"></a>
                 <a href="#"><img class="estudantes-icone" src="./imagem/github.png" alt="git-hub"></a>
             </div>
